--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -11,7 +11,18 @@
     h2 {
         font-weight: 700;
         text-align: center;
+        padding-top: 30px;
     }
+}
+
+.table {
+    table-layout: fixed;
+    width: 100%;
+}
+
+.tableContainer {
+    /*max-height: 400px;*/
+    /*overflow: auto;*/
 }
 
 .tableHead {
